chore: another response status (error response)
